# duty-call

./: .gitignore  README.md  build.bat  launcher.py  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
duty_call/: MainWindow.ui  __init__.py  __main__.py  config.py  tts.py  types.py  ui_MainWindow.py
